# 1bitmusic

./: .gitignore  1bitmusic.cabal  Makefile  README.md  TODO.md  default.nix  hie.yaml  stack.yaml
app/: Main.hs
compositions/: cabal.project
compositions/tepoz_ix/: Main.hs  Makefile  tepoz-ix.cabal
compositions/tepoz_vi/: Main.hs  Makefile  README.md  tepoz-vi.cabal
compositions/tepoz_vii/: Main.hs  Makefile  tepoz-vii.cabal
compositions/tepoz_viii/: Main.hs  Makefile  tepoz-viii.cabal
compositions/tepoz_x/: Main.hs  Makefile  tepoz_x.cabal
compositions/tepoz_xix/: Main.hs  Makefile  tepoz-xix.cabal
src/: Audio.hs  Boolean.hs  Comp.hs  Compiler.hs  LSystem.hs  Lib.hs  Phasor.hs  Tick.hs
src/Music1Bit/: Audio.hs  Boolean.hs  Combinators.hs  Comp.hs  Compiler.hs  Music.hs  Phasor.hs  Tick.hs  Types.hs
test/: Spec.hs
video/: Makefile  Tepoz.xcf
