name:                1bitmusic
version:             0.2.0.0
synopsis:            A library for writing 1-bit music
-- description:
homepage:            https://github.com/victoradan/1bitmusic#readme
license:             BSD3
license-file:        LICENSE
author:              Víctor Adán
maintainer:          vctradn@gmail.com
copyright:           2017 Víctor Adán
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Music1Bit.Tick 
                     , Music1Bit.Comp
                     , Music1Bit.Phasor
                     , Music1Bit.Boolean
                     , Music1Bit.Audio
                     , Music1Bit.Compiler
                     , Music1Bit.Types
                     , Music1Bit.Combinators
  build-depends:       base >= 4.7 && < 5
                     , storablevector >= 0.2.12
--                     , riff
                    --  , soxlib
--                     , algebraic-graphs >= 0.0.4 && < 1
--                     , wavy
  default-language:    Haskell2010

executable 1bitmusic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 1bitmusic
                     , bytestring
                     , binary
  default-language:    Haskell2010

test-suite 1bitmusic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , 1bitmusic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/victoradan/1bitmusic
