name:                1bitmusic
version:             0.2.0.0
synopsis:            A library for writing 1-bit music
description:         A library for writing 1-bit music
homepage:            https://github.com/victoradan/1bitmusic#readme
license:             BSD3
license-file:        LICENSE
author:              Víctor Adán
maintainer:          vctradn@gmail.com
copyright:           2017 - ∞ Víctor Adán
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Music1Bit.Music
                     , Music1Bit.Audio
                     , Music1Bit.Combinators
                     , Music1Bit.Types
                     , LSystem
  build-depends:       base >= 4.7 && < 5
                     , storablevector >= 0.2.12
                     , soxlib
                     , MemoTrie
                     , vector
                     , random
--                     , riff
--                     , algebraic-graphs >= 0.0.4 && < 1
--                     , wavy
  ghc-options:      -W -fwarn-incomplete-patterns
  default-language:    Haskell2010

test-suite 1bitmusic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck == 2.15
                     , 1bitmusic
  ghc-options:      -W -fwarn-incomplete-patterns
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/victoradan/1bitmusic
