cabal-version:      3.0
name:               tepoz-xix
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Víctor Adán
maintainer:         vctradn@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable tepoz-xix
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:     base >= 4.7 && < 5, 1bitmusic

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
    ghc-options:      -fwarn-incomplete-patterns
